fix some bugs, working at solutions class

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,5 +1,7 @@
 javax.validation.constraints.NotNull.message = Uzupelnij pole, nie moze byc puste.
 javax.validation.constraints.Size.message = Wpisales za malo lub za duzo slow
 org.hibernate.validator.constraints.Email.message = Podaj poprawny adres email.
-javax.validation.constraints.Pattern.message = Haslo musi zawierac jedna cyfre, jedna duza i mala litere i miec conajmniej 8 znakow.
+javax.validation.constraints.Pattern.message = Haslo musi zawierac jedna cyfre, jedna wielka i mala litere oraz miec conajmniej 8 znakow.
 org.hibernate.validator.constraints.Range.message = Podaj ocene w poprawnym zakresie (1-6).
+javax.validation.constraints.Min.message = Minimalna wartosc to 1.
+javax.validation.constraints.Max.message = Maksymalna wartosc to 2.
