fix bug with logout

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,6 +1,7 @@
 javax.validation.constraints.NotNull.message = Uzupelnij pole, nie moze byc puste.
 javax.validation.constraints.Size.message = Wpisales za mało lub za dużo słow
 org.hibernate.validator.constraints.Email.message = Podaj poprawny adres email.
-javax.validation.constraints.Min.message = Minimalna wartość to 1.
-javax.validation.constraints.Max.message = Maksymalna wartość to 16.
-org.springframework.web.method.annotation.MethodArgumentTypeMismatchException = Oceń rozwiązanie w skali od 1 do 6. Użyj '.', zamiast ','.
+javax.validation.constraints.Min.message = Minimalna wartosc to 1.
+javax.validation.constraints.Max.message = Maksymalna wartosc to 16.
+org.springframework.web.method.annotation.MethodArgumentTypeMismatchException = Ocen rozwiazanie w skali od 1 do 6.
+org.hibernate.validator.constraints.Range.message = Ocen rozwiazanie w skali od 1 do 6.
