--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,5 +1,5 @@
 javax.validation.constraints.NotNull.message = Uzupelnij, pole nie moze byc puste.
-javax.validation.constraints.Size.message = Wpisałeś za malo lub za duzo znakow.
+javax.validation.constraints.Size.message = Wpisales za malo lub za duzo znakow.
 org.hibernate.validator.constraints.Email.message = Podaj poprawny adres email.
 javax.validation.constraints.Min.message = Minimalna wartosc to 1.
 javax.validation.constraints.Max.message = Maksymalna wartosc to 16.
