fixed some errors

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -2,7 +2,7 @@ javax.validation.constraints.NotNull.message = Uzupelnij, pole nie moze byc pust
 javax.validation.constraints.Size.message = Wpisales za malo lub za duzo znakow.
 org.hibernate.validator.constraints.Email.message = Podaj poprawny adres email.
 javax.validation.constraints.Min.message = Minimalna wartosc to 1.
-javax.validation.constraints.Max.message = Maksymalna wartosc to 16.
+javax.validation.constraints.Max.message = Za duza wartosc.
 org.springframework.web.method.annotation.MethodArgumentTypeMismatchException = Ocen rozwiazanie w skali od 1 do 6.
 org.hibernate.validator.constraints.Range.message = Ocen rozwiazanie w skali od 1 do 6.
 org.hibernate.validator.constraints.NotEmpty.message = Uzupelnij, pole nie moze byc puste.
